--- a/tests/auto/integration/CMakeLists.txt
+++ b/tests/auto/integration/CMakeLists.txt
@@ -3,7 +3,7 @@
 # special case begin
 add_subdirectory(qaudiodecoderbackend)
 add_subdirectory(qaudiodeviceinfo)
-add_subdirectory(qaudioinput)
+add_subdirectory(qaudiosource)
 add_subdirectory(qaudiooutput)
 add_subdirectory(qmediaplayerbackend)
 add_subdirectory(qsoundeffect)
