--- a/examples/multimedia/CMakeLists.txt
+++ b/examples/multimedia/CMakeLists.txt
@@ -6,7 +6,7 @@ if(TARGET Qt::Widgets)
     add_subdirectory(spectrum)
     add_subdirectory(audiorecorder)
     add_subdirectory(audiodevices)
-    add_subdirectory(audioinput)
+    add_subdirectory(audiosource)
     add_subdirectory(audiooutput)
 endif()
 if(TARGET Qt::Quick)
