Rename tst_qcamera CMake target
It clashes with a target of equal name in qt3d.

Change-Id: I6078c78b9557a45aa1888c2c379c1a51e3f06d57
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/tests/auto/unit/multimedia/qcamera/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qcamera/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qcamera Test:
 #####################################################################
 
-qt_internal_add_test(tst_qcamera
+qt_internal_add_test(tst_qmultimediacamera
     SOURCES
         tst_qcamera.cpp
     INCLUDE_DIRECTORIES
