CMake: Use fixed qt_add_resource BASE argument
Task-number: QTBUG-86726
Change-Id: I5e96d2329ef048b31e182122b9cd86b6aa6ceaeb
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/video/qmlvideo/CMakeLists.txt
+++ b/examples/multimedia/video/qmlvideo/CMakeLists.txt
@@ -119,11 +119,8 @@ qt6_add_resources(qmlvideo "qmlvideo"
     FILES
         ${qmlvideo_resource_files}
 )
-set_source_files_properties("../snippets/frequencymonitor/qml/frequencymonitor/FrequencyItem.qml"
-    PROPERTIES QT_RESOURCE_ALIAS "qml/frequencymonitor/FrequencyItem.qml"
-)
 set(frequencymonitordeclarative_resource_files
-    "qml/frequencymonitor/FrequencyItem.qml"
+    "../snippets/frequencymonitor/qml/frequencymonitor/FrequencyItem.qml"
 )
 
 qt6_add_resources(qmlvideo "frequencymonitordeclarative"
@@ -134,11 +131,8 @@ qt6_add_resources(qmlvideo "frequencymonitordeclarative"
     FILES
         ${frequencymonitordeclarative_resource_files}
 )
-set_source_files_properties("../snippets/performancemonitor/qml/performancemonitor/PerformanceItem.qml"
-    PROPERTIES QT_RESOURCE_ALIAS "qml/performancemonitor/PerformanceItem.qml"
-)
 set(performancemonitordeclarative_resource_files
-    "qml/performancemonitor/PerformanceItem.qml"
+    "../snippets/performancemonitor/qml/performancemonitor/PerformanceItem.qml"
 )
 
 qt6_add_resources(qmlvideo "performancemonitordeclarative"
