--- a/examples/multimedia/video/qmlvideofx/CMakeLists.txt
+++ b/examples/multimedia/video/qmlvideofx/CMakeLists.txt
@@ -130,11 +130,8 @@ qt6_add_resources(qmlvideofx "qmlvideofx"
     FILES
         ${qmlvideofx_resource_files}
 )
-set_source_files_properties("../snippets/frequencymonitor/qml/frequencymonitor/FrequencyItem.qml"
-    PROPERTIES QT_RESOURCE_ALIAS "qml/frequencymonitor/FrequencyItem.qml"
-)
 set(frequencymonitordeclarative_resource_files
-    "qml/frequencymonitor/FrequencyItem.qml"
+    "../snippets/frequencymonitor/qml/frequencymonitor/FrequencyItem.qml"
 )
 
 qt6_add_resources(qmlvideofx "frequencymonitordeclarative"
@@ -145,11 +142,8 @@ qt6_add_resources(qmlvideofx "frequencymonitordeclarative"
     FILES
         ${frequencymonitordeclarative_resource_files}
 )
-set_source_files_properties("../snippets/performancemonitor/qml/performancemonitor/PerformanceItem.qml"
-    PROPERTIES QT_RESOURCE_ALIAS "qml/performancemonitor/PerformanceItem.qml"
-)
 set(performancemonitordeclarative_resource_files
-    "qml/performancemonitor/PerformanceItem.qml"
+    "../snippets/performancemonitor/qml/performancemonitor/PerformanceItem.qml"
 )
 
 qt6_add_resources(qmlvideofx "performancemonitordeclarative"
