Kill the current QMediaRecorder class
The class provides only minimal convenience over using
QMediaCaptureSession directly.

Change-Id: I706bb6821fbf8a7cc79a86819001ee1fd669733e
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/tests/auto/unit/multimedia/qmediaencoder/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qmediaencoder/CMakeLists.txt
@@ -1,7 +1,7 @@
-# Generated from qmediarecorder.pro.
+# Generated from QMediaEncoder.pro.
 
 #####################################################################
-## tst_qmediarecorder Test:
+## tst_QMediaEncoder Test:
 #####################################################################
 
 qt_internal_add_test(tst_qmediaencoder
