--- a/tests/auto/unit/multimedia/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(qcameradevice)
 add_subdirectory(qcameraimagecapture)
 add_subdirectory(qmediaplayer)
 add_subdirectory(qmediaplaylist)
-add_subdirectory(qmediaencoder)
+add_subdirectory(qmediarecorder)
 add_subdirectory(qmediatimerange)
 add_subdirectory(qvideoframe)
 add_subdirectory(qvideoframeformat)
