--- a/tests/auto/unit/multimedia/qcamera/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qcamera/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qcamera Test:
 #####################################################################
 
-qt_internal_add_test(tst_qmultimediacamera
+qt_internal_add_test(tst_qcamera
     SOURCES
         tst_qcamera.cpp
     INCLUDE_DIRECTORIES
