--- a/tests/auto/unit/multimedia/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory(qaudioformat)
 add_subdirectory(qaudionamespace)
 add_subdirectory(qcamera)
 add_subdirectory(qcameradevice)
-add_subdirectory(qcameraimagecapture)
+add_subdirectory(qimagecapture)
 add_subdirectory(qmediaformat)
 add_subdirectory(qmediaplayer)
 add_subdirectory(qmediaplaylist)
