--- a/tests/auto/unit/multimedia/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(qaudionamespace)
 add_subdirectory(qcamera)
 add_subdirectory(qcameradevice)
 add_subdirectory(qcameraimagecapture)
+add_subdirectory(qmediaformat)
 add_subdirectory(qmediaplayer)
 add_subdirectory(qmediaplaylist)
 add_subdirectory(qmediarecorder)
