Add ${QtBase_VERSION_MAJOR} to multimedia jar file
Follow the existing pattern for jar files in Qt 6.

Change-Id: I0db5435e71743615ff6f4f7f850d0a57504346b6
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -108,8 +108,8 @@ qt_internal_add_simd_part(Multimedia SIMD avx2
 
 if(ANDROID)
     set_property(TARGET Multimedia APPEND PROPERTY QT_ANDROID_BUNDLED_JAR_DEPENDENCIES
-        jar/QtAndroidMultimedia.jar:org.qtproject.qt.android.multimedia.QtMultimediaUtils
-        jar/QtAndroidMultimedia.jar:org.qtproject.qt.android.multimedia.QtAudioDeviceManager
+        jar/Qt${QtMultimedia_VERSION_MAJOR}AndroidMultimedia.jar:org.qtproject.qt.android.multimedia.QtMultimediaUtils
+        jar/Qt${QtMultimedia_VERSION_MAJOR}AndroidMultimedia.jar:org.qtproject.qt.android.multimedia.QtAudioDeviceManager
     )
     set_property(TARGET Multimedia APPEND PROPERTY QT_ANDROID_LIB_DEPENDENCIES
         lib/libQt6MultimediaQuick.so:Qt6Quick
