--- a/examples/multimediawidgets/player/CMakeLists.txt
+++ b/examples/multimediawidgets/player/CMakeLists.txt
@@ -29,6 +29,8 @@ qt_add_executable(player
     playercontrols.cpp playercontrols.h
     playlistmodel.cpp playlistmodel.h
     videowidget.cpp videowidget.h
+    qmediaplaylist.cpp qmediaplaylist.h qmediaplaylist_p.h
+    qplaylistfileparser.cpp qplaylistfileparser_p.h
 )
 set_target_properties(player PROPERTIES
     WIN32_EXECUTABLE TRUE
