--- a/src/multimediaquick/CMakeLists.txt
+++ b/src/multimediaquick/CMakeLists.txt
@@ -22,7 +22,7 @@ qt_internal_add_qml_module(MultimediaQuick
     SOURCES
         qquickimagecapture.cpp qquickimagecapture_p.h
         qquickimagepreviewprovider.cpp qquickimagepreviewprovider_p.h
-        qquickplaylist.cpp qquickplaylist_p.h
+#        qquickplaylist.cpp qquickplaylist_p.h
         qquickvideooutput.cpp qquickvideooutput_p.h
         qquickvideooutput_render.cpp qquickvideooutput_render_p.h
         qsgvideonode_p.cpp qsgvideonode_p.h
