Make git ignore build artifacts
Change-Id: Ia585011f99893151a233a4fd2866d3c253a8254c
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ tests/auto/cmake/build
 
 # Generated static plugin import sources
 *_plugin_import.cpp
+
+# Build artifacts
+CMakeLists.txt.user
+build-*-Debug
+build-*-Release
