Add the 'Private' suffix to the internal module names
Rename internal modules to adjust their names to the internal module
policy.

Pick-to: 6.2
Fixes: QTBUG-94613
Change-Id: Icb0d7c63f405ea10cb31471f58bd3d82a76f8cb3
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/multimediaquick/CMakeLists.txt
+++ b/src/multimediaquick/CMakeLists.txt
@@ -1,5 +1,5 @@
 #####################################################################
-## MultimediaQuick Module:
+## MultimediaQuickPrivate Module:
 #####################################################################
 
 set(qml_files
@@ -9,7 +9,7 @@ set_source_files_properties(Video.qml PROPERTIES
     QT_QML_SOURCE_VERSION "5.0"
 )
 
-qt_internal_add_qml_module(MultimediaQuick
+qt_internal_add_qml_module(MultimediaQuickPrivate
     URI "QtMultimedia"
     VERSION "${PROJECT_VERSION}"
     PAST_MAJOR_VERSIONS 5
