Add a simple recorder app for capturing audio or audio/video streams
Change-Id: Iad6e33f6ec77aa28121b8b0d1b9c0ae32616c30e
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/video/CMakeLists.txt
+++ b/examples/multimedia/video/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(qmlvideo)
 add_subdirectory(qmlvideofx)
 if(TARGET Qt::QuickControls2)
     add_subdirectory(mediaplayer)
+    add_subdirectory(recorder)
 endif()
 if(ANDROID)
     add_subdirectory(android)
