Fix Bluetooth audio devices connection state signals
Allow audio{Input,Output}sChanged() to be called for
Bluetooth audio devices.

Pick-to: 6.2
Change-Id: Ib50e01b7e43d639a18156697ba6479232c4ccf24
Reviewed-by: Bartlomiej Moskal <bartlomiej.moskal@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -117,6 +117,7 @@ if(ANDROID)
     )
     set_property(TARGET Multimedia APPEND PROPERTY QT_ANDROID_PERMISSIONS
         android.permission.CAMERA android.permission.RECORD_AUDIO
+        android.permission.BLUETOOTH
     )
 endif()
 
