Fix mediaplayer QML example's layout and icons
The play control buttons were overlaying the rate seekbar and
have wrong layout on both portrait and landscape.

Also make sure QtSvg is added to the project because mute/unmute
button is an svg image and it's not being loaded properly without
the fix.

Change-Id: I98e26273ca5a2496d624c378d868ac497dd19741
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 671396809fd866e0e3d7793f8fd635b0ad33bed7)
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -8,3 +8,6 @@ dependencies:
   ../qtshadertools:
     ref: be7e2cb95b8ea61a29b9f34fc066203952726ec9
     required: true
+  ../qtsvg:
+    ref: 68acdcd9ed7d52073408606b4cc86ecc819e7130
+    required: false
