--- a/examples/multimedia/video/CMakeLists.txt
+++ b/examples/multimedia/video/CMakeLists.txt
@@ -3,7 +3,9 @@
 add_subdirectory(qmlvideo)
 add_subdirectory(qmlvideofx)
 if(TARGET Qt::QuickControls2)
-    add_subdirectory(mediaplayer)
+    if(TARGET Qt::Svg)
+        add_subdirectory(mediaplayer)
+    endif()
     add_subdirectory(recorder)
 endif()
 if(ANDROID)
