Fix mediaplayer QML example's layout and icons
The play control buttons were overlaying the rate seekbar and
have wrong layout on both portrait and landscape.

Also make sure QtSvg is added to the project because mute/unmute
button is an svg image and it's not being loaded properly without
the fix.

Pick-to: 6.2
Change-Id: I98e26273ca5a2496d624c378d868ac497dd19741
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -8,3 +8,6 @@ dependencies:
   ../qtshadertools:
     ref: 839fb5ce9f96b90f8f768cc7113757d75a59253b
     required: true
+  ../qtsvg:
+    ref: 61ed65dd492a262783033b1789dcbc99280e4efb
+    required: false
