CMake: Use renamed qt6_add_plugin PLUGIN_TYPE option
Task-number: QTBUG-95170
Pick-to: 6.2
Change-Id: I8d057e1d578ff27be0fb79f8708cfe58391b4d46
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

--- a/src/plugins/videonode/imx6/CMakeLists.txt
+++ b/src/plugins/videonode/imx6/CMakeLists.txt
@@ -6,7 +6,7 @@
 
 qt_internal_add_plugin(QSGVivanteVideoNodeFactory
     OUTPUT_NAME imx6vivantevideonode
-    TYPE video/videonode
+    PLUGIN_TYPE video/videonode
     SOURCES
         qsgvivantevideomaterial.cpp qsgvivantevideomaterial.h
         qsgvivantevideomaterialshader.cpp qsgvivantevideomaterialshader.h
