--- a/tests/auto/integration/CMakeLists.txt
+++ b/tests/auto/integration/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(qaudiodecoderbackend)
 add_subdirectory(qaudiodevice)
 add_subdirectory(qaudiosource)
 add_subdirectory(qaudiosink)
+add_subdirectory(qmediacapturesession)
 add_subdirectory(qmediaplayerbackend)
 add_subdirectory(qsoundeffect)
 if(TARGET Qt::Widgets)
